add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Poppins:ital,wght@0,400;0,600;1,400;1,600&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
+    <link
+          class="favicon"
+          rel="icon"
+          href="./images/logo.png"
+          type="image/x-icon"
+        >
   </head>
   <body>
     <header class="header">
@@ -123,10 +129,85 @@
 
       </section>
       <section class="galery" id="galery"></section>
-      <section class="events" id="events"></section>
+      <section class="events" id="events">
+        <h2 class="events__title">Підписка</h2>
+        <p class="events__descroption">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <form
+          action="#"
+          method="get"
+          class="events__form"
+        >
+          <input
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            class="events__form--input"
+            required
+          >
+          <button class="events__form--button" type="submit"></button>
+        </form>
+
+      </section>
     </main>
 
-    <footer class="contacts" id="contacts"></footer>
+    <footer class="contacts" id="contacts">
+      <div class="contacts__top">
+        <a href="#" class="logo">
+          <img
+            src="./images/logo.png"
+            alt="logo"
+            class="logo__picture"
+          >
+        </a>
+
+        <div class="contacts__social">
+          <a href="#" class="icon icon--facebook"></a>
+          <a href="#" class="icon icon--instagram"></a>
+        </div>
+      </div>
+
+      <div class="contacts__work contacts__time">
+        <div class="contacts__work--day">Графік роботи</div>
+        <div class="contacts__work--hours">
+          <p class="contacts__work--day"><span class="contacts__work--bold">12:00 — 20:00</span> середа</p>
+          <p class="contacts__work--day"><span class="contacts__work--bold">12:00 — 20:00</span> четвер</p>
+          <p class="contacts__work--day"><span class="contacts__work--bold">12:00 — 20:00</span> п’ятниця</p>
+          <p class="contacts__work--day"><span class="contacts__work--bold">11:00 — 19:00</span> субота</p>
+          <p class="contacts__work--day"><span class="contacts__work--bold">11:00 — 19:00</span> неділя</p>
+          <p class="contacts__work--day weekend">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
+        </div>
+      </div>
+
+      <div class="contacts__work contacts__connect">
+        <div class="contacts__work--day">Контакти:</div>
+        <div class="contacts__work--hours">
+          <a href="#" class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
+          <a href="#" class="contacts__link">тел. +38 (044) 278-13-57</a>
+          <a href="#" class="contacts__link">факс +38 (044) 278-74-54</a>
+          <a href="#" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+        </div>
+      </div>
+
+      <div class="contacts__line"></div>
+
+      <div class="contacts__menu">
+        <div class="contacts__items top--left">
+          <a href="#galery" class="contacts__menu__link">Галерея</a>
+          <a href="#events" class="contacts__menu__link">Виставки та події</a>
+        </div>
+        <div class="contacts__items top--right">
+          <a href="#aboute__us" class="contacts__menu__link">Про Нас</a>
+          <a href="#contacts" class="contacts__menu__link">Контакти</a>
+        </div>
+      </div>
+
+      <div class="contacts__bottom">
+        <a href="#" class="contacts__bottom--link">Designed by Zhyriada Marina</a>
+        <a href="#" class="contacts__bottom--link">Copyright © 2019. All Rights Reserved.</a>
+      </div>
+
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
