--- a/src/index.html
+++ b/src/index.html
@@ -355,9 +355,9 @@
           вул. М. Грушевського, 6; Київ, 01001
           </a>
 
-          <a class="contacts__link hover" href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+          <a class="contacts__link hover" href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
 
-          <a class="contacts__link hover" href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+          <a class="contacts__link hover" href="fax:+380442787454">факс +38 (044) 278-74-54</a>
 
           <a
             class="contacts__link hover"
