--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,18 @@
   </head>
   <body>
     <header class="header" id="header">
-      <img src="./images/mobile-muzej.png" alt="image" class="header__image">
-      <div class="header__nav">
+      <nav class="header__nav">
         <a href="#menu" class="header__link icon icon--menu"></a>
 
         <a href="#" class="header__link icon icon--logo"></a>
-      </div>
+      </nav>
 
       <div class="header__bottom">
-        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
 
         <div class="header__bottom__container">
-          <p href="#" class="header__bottom__link">КВИТКИ</p>
-          <img src="./images/icons/arrow-white.svg" alt="arrow logo" class="header__bottom__image">
+          <a href="#" class="header__bottom__link">КВИТКИ</a>
+          <a href="#" class="header__bottom__button"><img src="./images/icons/arrow-white.svg" alt="logo"></a>
         </div>
       </div>
     </header>
@@ -61,33 +60,37 @@
 
     <main class="main">
       <section class="events" id="expo">
-        <div class="events__conteiner">
-          <h2 class="events__title">Актуальні події</h2>
+        <h2 class="events__title">Актуальні події</h2>
 
-          <div class="events__catalog">
-            <div class="event">
+        <div class="events__catalog">
+          <div class="event">
+            <div class="event__image__container">
               <img src="./images/events/mobile-event-1.png" alt="painting" class="event__image">
-              <div class="event__conteiner">
-                <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
-                <h4 class="event__title">Йду і повертаюсь</h4>
-                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
-              </div>
             </div>
 
-            <div class="event">
+            <div class="event__conteiner">
+              <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
+              <h4 class="event__title">Йду і повертаюсь</h4>
+              <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="event__image__container">
               <img src="./images/events/mobile-event-2.png" alt="painting" class="event__image">
-              <div class="event__conteiner">
-                <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
-                <h4 class="event__title">І спогади і мрії</h4>
-                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
-              </div>
+            </div>
+
+            <div class="event__conteiner">
+              <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
+              <h4 class="event__title">І спогади і мрії</h4>
+              <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
             </div>
           </div>
         </div>
       </section>
 
       <section class="lections">
-        <img src="./images/mobile-muzej-2.png" alt="image" class="lections__image">
+        <!-- <img src="./images/mobile-muzej-2.png" alt="image" class="lections__image"> -->
         <div class="lections__container">
           <h2 class="lections__title">ЛЕКЦІЯ <span class="lections__date">26/08/2019 - 11:00</span></h2>
           <p class="lections__name">Від класицизму до романтизму</p>
@@ -153,97 +156,107 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__icons">
-        <a href="#">
-          <img
-            src="./images/logo-NA-MU.svg"
-            alt="logo"
-            class="icon icon__footer--logo"
-          >
-        </a>
+      <div class="footer__wrapper">
+        <div class="footer__icons">
+          <a href="#" class="icon icon__footer--logo"></a>
 
-        <div class="footer__media">
-          <a href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D" target="_blank">
-            <img
-              src="./images/socials/facebook.svg"
-              alt="facebook logo"
+          <div class="footer__media">
+            <a
+              href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+              target="_blank"
               class="icon icon--facebook"
             >
-          </a>
-          <a href="https://www.facebook.com/namu.museum" target="_blank">
-            <img
-              src="./images/socials/instagram.svg"
-              alt="instagram logo"
+            </a>
+
+            <a
+              href="https://www.facebook.com/namu.museum"
+              target="_blank"
               class="icon icon--instagram"
             >
-          </a>
-        </div>
-      </div>
-
-      <div class="footer__conteiner">
-        <div class="footer__schedule">
-          <h2 class="footer__title">Графік роботи</h2>
-          <p class="footer__description">
-            <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
-            <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
-            <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
-            <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
-            <span class="footer__schedule__time">11:00 — 19:00</span> неділя
-          </p>
-          <br>
-          <p class="footer__description">Вихідні: понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину<br>
-            до закриття музею
-          </p>
+            </a>
+          </div>
         </div>
 
-        <!-- <a href="#header" class="scroll__top"></a> -->
+        <div class="footer__conteiner">
+          <div class="footer__schedule">
+            <h2 class="footer__title">Графік роботи</h2>
+            <p class="footer__description">
+              <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
+              <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
+              <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
+              <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
+              <span class="footer__schedule__time">11:00 — 19:00</span> неділя
+            </p>
+            <br>
+            <p class="footer__description">Вихідні: понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
 
-        <div class="footer__contacts">
-          <h2 class="footer__title">Контакти:</h2>
-          <ul class="footer__list">
-            <li>
-              <a
-                href="https://maps.app.goo.gl/zCasBhZbAHNzAGqG9"
-                target="_blank"
-                class="footer__link"
-              >
-                вул. М. Грушевського, 6; Київ, 01001
-              </a>
-            </li>
-            <li>
-              <a
-                href="tel:380442781357"
-                class="footer__link"
-              >
-                тел. +38 (044) 278-13-57
-              </a>
-            </li>
-            <li>
-              <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
-            </li>
-            <li>
-              <a
-                href="mailto:"
-                target="_blank"
-                class="footer__link"
-              >
-                e-mail: info@namu.kiev.ua
-              </a>
-            </li>
-          </ul>
+          <div class="footer__contacts">
+            <h2 class="footer__title">Контакти:</h2>
+            <ul class="footer__list">
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/zCasBhZbAHNzAGqG9"
+                  target="_blank"
+                  class="footer__link"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="tel:380442781357"
+                  class="footer__link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
+              </li>
+
+              <li>
+                <a
+                  href="mailto:"
+                  target="_blank"
+                  class="footer__link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <nav class="footer__navigation navigation">
-        <a href="#gallery" class="navigation__link">Галерея</a>
-        <a href="#expo" class="navigation__link">Виставки та події</a>
-        <a href="#about_us" class="navigation__link">Про Нас</a>
-        <a href="#contacts" class="navigation__link">Контакти</a>
+        <ul class="footer__navigation__list">
+          <li>
+            <a href="#gallery" class="navigation__link">Галерея</a>
+          </li>
+
+          <li>
+            <a href="#expo" class="navigation__link">Виставки та події</a>
+          </li>
+
+          <li>
+            <a href="#about_us" class="navigation__link">Про Нас</a>
+          </li>
+
+          <li>
+            <a href="#contacts" class="navigation__link">Контакти</a>
+          </li>
+        </ul>
       </nav>
 
-      <p class="footer__rights">Designed by Zhyriada Marina</p>
-      <p class="footer__rights">Copyright 	&#169; 2019. All Rights Reserved.</p>
+      <div class="footer__bootom">
+        <p class="footer__rights">Designed by Zhyriada Marina</p>
+        <p class="footer__rights">Copyright 	&#169; 2019. All Rights Reserved.</p>
+      </div>
     </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
