--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,380 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Museum</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/fav_namu.png"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <header class="header">
+      <div class="header__cover"></div>
+      <div class="container">
+        <div class="header__top">
+          <a href="#menu" class="icon icon__menu"></a>
+          <a href="#" class="logo logo--header"></a>
+        </div>
+        <h1 class="header__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+        <div class="header__button">
+          <a href="#" class="header__button__text">КВИТКИ</a>
+          <a href="#" class="header__button__photo"></a>
+        </div>
+      </div>
+      <div class="header__actions">
+        <div class="header__actions__line"></div>
+        <div class="header__actions__text">
+          ПОДІЇ
+        </div>
+      </div>
+    </header>
+    <aside class="menu" id="menu">
+      <div class="container">
+        <a href="#" class="icon icon__close"></a>
+        <nav class="nav nav--menu">
+          <ul class="nav--menu__list">
+            <li class="nav--menu__item">
+              <a href="#gallery" class="nav--menu__link">
+                Галерея
+              </a>
+            </li>
+            <li class="nav--menu__item">
+              <a href="#actual" class="nav--menu__link">
+                Про Нас
+              </a>
+            </li>
+            <li class="nav--menu__item">
+              <a href="#suscribe" class="nav--menu__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav--menu__item">
+              <a href="#footer" class="nav--menu__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="menu__line">
+
+        </div>
+        <div class="menu__schedule">
+          <p>
+            Графік роботи
+          </p>
+          <p>
+            12:00—20:00 середа<br>
+            12:00—20:00 четвер<br>
+            12:00—20:00 п’ятниця<br>
+            11:00—19:00 субота<br>
+            11:00—19:00 неділя<br>
+          </p>
+          <p>
+            Вихідні: понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+    <main>
+      <section class="actual" id="actual">
+        <div class="container">
+          <h2 class="actual__title">
+            Актуальні події
+          </h2>
+          <div class="actual__photo actual__photo--1">
+            <img
+              src="./images/actual-1.png"
+              alt="exhibition photo"
+              class="actual__photo__image">
+          </div>
+          <div class="actual__exhibition">
+            <div class="actual__exhibition__calendar">
+              <p class="actual__exhibition__calendar__type">
+                ВИСТАВКА
+              </p>
+              <p class="actual__exhibition__calendar__date">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <div class="actual__exhibition__name">
+              <h3 class="actual__exhibition__name__title">
+                Йду і повертаюсь
+              </h3>
+              <div class="actual__exhibition__name__square"></div>
+            </div>
+            <p class="actual__exhibition__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+          <div class="actual__photo actual__photo--2">
+            <img
+              src="./images/actual-2.png"
+              alt="exhibition photo"
+              class="actual__photo__image">
+          </div>
+          <div class="actual__exhibition">
+            <div class="actual__exhibition__calendar">
+              <p class="actual__exhibition__calendar__type">
+                ВИСТАВКА
+              </p>
+              <p class="actual__exhibition__calendar__date">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <div class="actual__exhibition__name">
+              <h3 class="actual__exhibition__name__title">
+                І спогади і мрії
+              </h3>
+              <div class="actual__exhibition__name__square"></div>
+            </div>
+            <p class="actual__exhibition__description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="lection">
+        <div class="container__lection">
+          <div class="lection__cover">
+            <img
+              src="./images/lection.png"
+              alt="sectionCoverPhoto"
+              class="lection__cover--image"
+            >
+          </div>
+          <div class="lection__exhibition">
+            <div class="lection__exhibition__calendar">
+              <p class="lection__exhibition__calendar--name">
+                ЛЕКЦІЯ
+              </p>
+              <p class="lection__exhibition__calendar--date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <h3 class="lection__exhibition__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="slider">
+            <span id="slide-1"></span>
+            <span id="slide-2"></span>
+            <span id="slide-3"></span>
+            <span id="slide-4"></span>
+            <div class="image-container">
+              <img
+                src="./images/gallery1.png"
+                class="slide slide__image--1"
+                alt="GalleryImage1"
+              >
+              <img
+                src="./images/gallery768.png"
+                class="slide slide__image--2"
+                alt="GalleryImage2"
+              >
+              <img
+                src="./images/gallery2.png"
+                class="slide slide__image--3"
+                alt="GalleryImage2"
+              >
+              <img
+                src="./images/gallery3.png"
+                class="slide slide__image--4"
+                alt="GalleryImage3"
+              >
+              <img
+                src="./images/gallery4.png"
+                class="slide slide__image--5"
+                alt="GalleryImage4"
+              >
+            </div>
+            <div class="buttons">
+              <a href="#slide-1"></a>
+              <a href="#slide-2"></a>
+              <a href="#slide-3"></a>
+              <a href="#slide-4"></a>
+            </div>
+          </div>
+          <div class="gallery__photos">
+            <img
+              src="./images/gallery1.png"
+              class="gallery__photos__image gallery__photos__image--1"
+              alt="GalleryImage1"
+            >
+            <img
+              src="./images/gallery768.png"
+              class="gallery__photos__image gallery__photos__image--2"
+              alt="GalleryImage2"
+            >
+            <img
+              src="./images/gallery2.png"
+              class="gallery__photos__image gallery__photos__image--3"
+              alt="GalleryImage2"
+            >
+            <img
+              src="./images/gallery3.png"
+              class="gallery__photos__image gallery__photos__image--4"
+              alt="GalleryImage2"
+            >
+            <img
+              src="./images/gallery4.png"
+              class="gallery__photos__image gallery__photos__image--5"
+              alt="GalleryImage2"
+            >
+          </div>
+          <div class="gallery__dots">
+            <img
+              src="./images/greenDots.png"
+              alt="dotsSlider"
+              class="gallery__photos__image gallery__dots__image"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="suscribe" id="suscribe">
+        <div class="container">
+          <h2 class="suscribe__title">
+            Підписка
+          </h2>
+          <p class="suscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            onsubmit="this.reset(); return false;"
+            class="suscribe__button"
+          >
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="suscribe__button__text"
+              placeholder="Email"
+              required
+            >
+            <input
+              type="submit"
+              class="suscribe__button__photo"
+              value=" "
+            >
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__iconsWrapper">
+          <a href="#" class="logo logo--footer"></a>
+          <div class="footer__iconsWrapper__social">
+            <a
+            href="https://www.facebook.com/"
+            class="icon icon__fb"
+            target="_blank"
+            >
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              class="icon icon__ig"
+              target="_blank"
+            >
+            </a>
+          </div>
+        </div>
+        <div class="footer__schedule">
+          <p>
+            Графік роботи
+          </p>
+          <p>
+            12:00 — 20:00 середа<br>
+            12:00 — 20:00 четвер<br>
+            12:00 — 20:00 п’ятниця<br>
+            11:00 — 19:00 субота<br>
+            11:00 — 19:00 неділя
+          </p>
+          <p>
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts">
+          <p>
+            Контакти:
+          </p>
+          <a
+            href="https://maps.app.goo.gl/DWAAuG9Wf2enZnhF6"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a href="tel:+38 (044) 278-13-57">
+            тел. +38 (044) 278-13-57
+          </a>
+          <a href="tel:+38 (044) 278-74-54">
+            факс +38 (044) 278-74-54
+          </a>
+          <a href="mailto:info@namu.kiev.ua">
+            e-mail: info@namu.kiev.ua
+          </a>
+        </div>
+        <a href="#" class="footer__arrowUp">
+
+        </a>
+        <div class="footer__line">
+
+        </div>
+        <nav class="nav nav--footer">
+          <ul class="nav--footer__list">
+            <li class="nav--footer__item">
+              <a href="#gallery" class="nav--footer__link">
+                Галерея
+              </a>
+            </li>
+            <li class="nav--footer__item">
+              <a href="#actual" class="nav--footer__link">
+                Про Нас
+              </a>
+            </li>
+            <li class="nav--footer__item">
+              <a href="#suscribe" class="nav--footer__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav--footer__item">
+              <a href="#footer" class="nav--footer__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__rights">
+          <p>
+            Designed by Zhyriada Marina
+          </p>
+          <p>
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
