add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,45 @@
         </div>
 
       </section>
-      <section class="galery" id="galery"></section>
+      <section class="galery" id="galery">
+        <h2 class="galery__title">Галерея</h2>
+        <img
+          src="./images/galery/picture-1.png"
+          alt="Galery photo"
+          class="galery__photo photo--1"
+        >
+
+        <img
+          src="./images/galery/picture-0.png"
+          alt="Galery photo"
+          class="galery__photo photo--0"
+        >
+
+        <img
+          src="./images/galery/picture-2.png"
+          alt="Galery photo"
+          class="galery__photo photo--2"
+        >
+
+        <img
+          src="./images/galery/picture-3.png"
+          alt="Galery photo"
+          class="galery__photo photo--3"
+        >
+
+        <img
+          src="./images/galery/picture-4.png"
+          alt="Galery photo"
+          class="galery__photo photo--4"
+        >
+
+        <div class="galery__slider">
+          <a href="#" class="galery__slider--button active"></a>
+          <a href="#" class="galery__slider--button"></a>
+          <a href="#" class="galery__slider--button"></a>
+          <a href="#" class="galery__slider--button"></a>
+        </div>
+      </section>
       <section class="events" id="events">
         <h2 class="events__title">Підписка</h2>
         <p class="events__descroption">Бути в курсі всіх актуальних подій та останніх новин.</p>
