layout for tablet almost ready

--- a/src/index.html
+++ b/src/index.html
@@ -249,8 +249,8 @@
       </section>
 
       <section class="contact-us" id="contact-us">
-        <div class="logo"></div>
-        <div class="socials">
+        <div class="logo contact-us__logo"></div>
+        <div class="socials contact-us__socials">
           <a
             href="https://www.facebook.com/"
             class="socials__fb"
@@ -262,7 +262,7 @@
             target="_blank">
           </a>
         </div>
-        <div class="opening">
+        <div class="opening contact-us__opening">
           <h4 class="title title__fourth">Графік роботи</h4>
 
           <article>
@@ -273,21 +273,24 @@
             <p><span class="opening--hour">11:00 — 19:00</span> неділя</p>
             <br>
             Вихідні понеділок, вівторок
+            <br>
             Kaca припиняє роботу за 1 годину
             до закриття музею
           </article>
         </div>
 
-        <address class="address">
+        <address class="address contact-us__address">
           <h4 class="title title__fourth">Контакти:</h4>
           <p class="address__address">вул. M. Грушевського, 6; Київ, 01001</p>
           <p class="address__phone">тел. +38 (044) 278-13-57</p>
           <p class="address__fax">факс +38 (044) 278-74-54</p>
           <p class="address__email">e-mail: info@namu.kiev.ua</p>
         </address>
-        <div class="line">
+
+        <div class="line contact-us__line">
           <hr class="line__horizontal">
         </div>
+
         <nav class="links contact-us__links">
           <ul class="links__list">
             <li class="links__item"><a href="" class="links__link">Галерея</a></li>
