layout for tablet ready

--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,8 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-pagination"></div>
         </div>
-<!--
+
+        <!--
         <div class="slider" id="mySlider">
           <div class="slider-slides">
             <article class="slider-slide is-active">
@@ -222,7 +223,8 @@
             </button>
           </div>
         </div>
--->
+        -->
+
       </section>
 
       <section class="subscribe">
@@ -293,10 +295,10 @@
 
         <nav class="links contact-us__links">
           <ul class="links__list">
-            <li class="links__item"><a href="" class="links__link">Галерея</a></li>
-            <li class="links__item"><a href="" class="links__link">Про Hac</a></li>
-            <li class="links__item"><a href="" class="links__link">Виставки та події</a></li>
-            <li class="links__item"><a href="" class="links__link">Контакти</a></li>
+            <li class="links__item"><a href="#gallery" class="links__link">Галерея</a></li>
+            <li class="links__item"><a href="#home" class="links__link">Про Hac</a></li>
+            <li class="links__item"><a href="#events" class="links__link">Виставки та події</a></li>
+            <li class="links__item"><a href="#contact-us" class="links__link">Контакти</a></li>
           </ul>
         </nav>
       </section>
