--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,12 @@
   </head>
 
   <body class="page__content">
-    <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header page__header">
       <div class="header__top">
         <div class="container">
           <div class="header__top-bar top-bar">
-            <a
-              href="#menu-header"
-              class="top-bar__menu"
-            >
-            </a>
-            <a
-              href="#"
-              class="logo"
-            >
+            <a href="#menu-header" class="top-bar__menu"></a>
+            <a href="#" class="logo">
               <p class="logo__name">NA</p>
               <p class="logo__name">MU</p>
             </a>
@@ -38,10 +30,7 @@
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
             <div class="header__tickets tickets">
               <p class="tickets__main">квитки</p>
-              <a
-                href="#actions"
-                class="btn btn__tickets"
-              >
+              <a href="#actions" class="btn btn__tickets">
                 <img
                   src="images/icons/arrow.svg"
                   alt="tickets"
@@ -58,77 +47,45 @@
           <div class="container">
             <div class="menu-header__box">
               <div class="menu-header__top">
-                <a
-                  href="#"
-                  class="menu-header__close"
-                >
-                </a>
-
+                <a href="#" class="menu-header__close"></a>
                 <section class="menu">
                   <h2 class="visually-hidden">Меню</h2>
                   <div class="menu__content menu__content--header">
                     <div class="menu__box">
-                      <a
-                        href="#gallery"
-                        class="menu__item menu__item--header"
-                      >
-                        Галерея
-                      </a>
-                      <a
-                        href="#actions"
-                        class="menu__item menu__item--header"
-                      >
-                        Виставки та події
-                      </a>
+                      <a href="#gallery" class="menu__item menu__item--header">Галерея</a>
+                      <a href="#actions" class="menu__item menu__item--header">Виставки та події</a>
                     </div>
                     <div class="menu__box">
-                      <a
-                        href="#schedule"
-                        class="menu__item menu__item--header"
-                      >
-                        Про Нас
-                      </a>
-                      <a
-                        href="#schedule"
-                        class="menu__item menu__item--header"
-                      >
-                        Контакти
-                      </a>
+                      <a href="#schedule" class="menu__item menu__item--header">Про Нас</a>
+                      <a href="#schedule" class="menu__item menu__item--header">Контакти</a>
                     </div>
                   </div>
                 </section>
               </div>
-
               <div class="menu-header__bottom">
                 <div class="menu-header__schedule">
                   <p class="menu-header__text menu-header__text--title">Графік роботи</p>
                   <p class="menu-header__text">
-                    <strong class="menu-header__time">12:00 — 20:00</strong>
-                      середа
+                    <strong class="menu-header__time">12:00 — 20:00</strong> середа
                   </p>
                   <p class="menu-header__text">
-                    <strong class="menu-header__time">12:00 — 20:00</strong>
-                      четвер
+                    <strong class="menu-header__time">12:00 — 20:00</strong> четвер
                   </p>
                   <p class="menu-header__text">
-                    <strong class="menu-header__time">12:00 — 20:00</strong>
-                      п’ятниця
+                    <strong class="menu-header__time">12:00 — 20:00</strong> п’ятниця
                   </p>
                   <p class="menu-header__text">
-                    <strong class="menu-header__time">12:00 — 20:00</strong>
-                      субота
+                    <strong class="menu-header__time">12:00 — 20:00</strong> субота
                   </p>
                   <p class="menu-header__text">
-                    <strong class="menu-header__time">12:00 — 20:00</strong>
-                      неділя
+                    <strong class="menu-header__time">12:00 — 20:00</strong> неділя
                   </p>
                 </div>
                 <div class="menu-header__text-box">
                   <p class="menu-header__text">
-                    <strong class="menu-header__time">Вихідні:</strong>
-                      понеділок, вівторок
+                    <strong class="menu-header__time">Вихідні:</strong> понеділок, вівторок
                   </p>
-                  <p class="menu-header__text">Каса припиняє роботу за 1 годину до закриття музею </p>
+                  <p class="menu-header__text"> Каса припиняє роботу за 1 годину до закриття музею </p>
                 </div>
               </div>
             </div>
@@ -154,11 +111,13 @@
               </div>
               <div class="actions__description">
                 <div class="actions__data">
-                  <p class="actions__name">Виставка</p>
+                  <p class="actions__name">ВИСТАВКА</p>
                   <p class="actions__date">26.08-29.11.2019</p>
                 </div>
                 <h3 class="actions__title">Йду і повертаюсь</h3>
-                <p class="actions__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років. </p>
+                <p class="actions__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
               </div>
             </div>
           </div>
@@ -169,17 +128,19 @@
               <div class="actions__img-wr">
                 <img
                   src="images/events-photo/events-2.png"
-                  alt="І спогади і мрії"
+                  alt="Йду і повертаюсь"
                   class="actions__img"
                 >
               </div>
               <div class="actions__description">
                 <div class="actions__data">
-                  <p class="actions__name">Виставка</p>
+                  <p class="actions__name">ВИСТАВКА</p>
                   <p class="actions__date">26.08-29.11.2019</p>
                 </div>
                 <h3 class="actions__title">І спогади і мрії</h3>
-                <p class="actions__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+                <p class="actions__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
               </div>
             </div>
           </div>
@@ -192,7 +153,7 @@
               class="actions__img actions__img--3"
             >
           </div>
-          <div class="container">
+          <div class="container__lection">
             <div class="actions__bottom">
               <div class="actions__data actions__data--3">
                 <p class="actions__name">ЛЕКЦІЯ</p>
@@ -203,6 +164,7 @@
           </div>
         </article>
       </section>
+
       <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="gallery__title section-title">Галерея</h2>
@@ -210,28 +172,28 @@
             <div class="slider__images">
               <div class="slider__img-wr">
                 <img
-                  src="images/icons/dots.svg"
+                  src="images/gallery-photo/1-l.png"
                   alt="image-1"
                   class="slider__img"
                 >
               </div>
               <div class="slider__img-wr">
                 <img
-                  src="images/icons/dots-2.svg"
+                  src="images/gallery-photo/1-r.png"
                   alt="image-1"
                   class="slider__img"
                 >
               </div>
               <div class="slider__img-wr">
                 <img
-                  src="images/icons/dots-3.svg"
+                  src="images/gallery-photo/2-l.png"
                   alt="image-1"
                   class="slider__img"
                 >
               </div>
               <div class="slider__img-wr">
                 <img
-                  src="images/icons/dots-4.svg"
+                  src="images/gallery-photo/2-r.png"
                   alt="image-1"
                   class="slider__img"
                 >
@@ -289,7 +251,7 @@
         <div class="container">
           <div class="subscribe__content">
             <h2 class="section-title subscribe__title">Підписка</h2>
-            <p class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин. </p>
+            <p class="subscribe__subtitle"> Бути в курсі всіх актуальних подій та останніх новин. </p>
             <form
               action="#"
               class="form subscribe__form"
@@ -302,7 +264,7 @@
                   name="email"
                   autocomplete="on"
                   placeholder="E-mail"
-                  required
+                  required=""
                 >
                 <button class="btn btn__form">
                   <img
@@ -316,9 +278,8 @@
           </div>
         </div>
       </section>
-
       <section class="main__schedule schedule" id="schedule">
-        <h2 class="visually-hidden"></h2>
+        <h2 class="visually-hidden">Розклад роботи</h2>
         <div class="container">
           <div class="schedule__content">
             <div class="schedule__header">
@@ -332,20 +293,14 @@
                   class="social-icons__item"
                   target="_blank"
                 >
-                  <img
-                    src="images/icons/facebook.svg"
-                    alt="facebook icon"
-                  >
+                  <img src="images/icons/facebook.svg" alt="facebook icon">
                 </a>
                 <a
                   href="https://instagram.com"
                   target="_blank"
                   class="social-icons__item"
                 >
-                  <img
-                    src="images/icons/instagram.svg"
-                    alt="instagram icon"
-                  >
+                  <img src="images/icons/instagram.svg" alt="instagram icon">
                 </a>
               </div>
             </div>
@@ -374,10 +329,11 @@
                 </div>
               </div>
               <p class="schedule__text">
-                <strong>Вихідні:</strong>
-                  понеділок, вівторок
+                <strong>Вихідні:</strong> понеділок, вівторок
               </p>
-              <p class="schedule__text">Каса припиняє роботу за одну годину до закриття музею </p>
+              <p class="schedule__text">
+                Каса припиняє роботу за одну годину до закриття музею
+              </p>
             </div>
             <div class="schedule__right">
               <p class="schedule__text schedule__text--title">Контакти:</p>
@@ -385,67 +341,36 @@
                 href="https://www.google.com/maps"
                 target="_blank"
                 class="schedule__text schedule__text--link"
-              >
-                вул. М. Грушевського, 6; Київ, 01001
-              </a>
+              > вул. М. Грушевського, 6; Київ, 01001 </a>
               <a
                 href="tel:+38(044)278-13-57"
                 target="_blank"
                 class="schedule__text schedule__text--link"
-              >
-                тел. +38 (044) 278-13-57
-              </a>
+              > тел. +38 (044) 278-13-57 </a>
               <a
                 href="tel:+38(044)278-13-57"
                 target="_blank"
                 class="schedule__text schedule__text--link"
-              >
-                факс +38 (044) 278-74-54
-              </a>
+              > факс +38 (044) 278-74-54 </a>
               <a
                 href="mailto:info@namu.kiev.ua"
                 target="_blank"
                 class="schedule__text schedule__text--link"
-              >
-                e-mail: info@namu.kiev.ua
-              </a>
+              > e-mail: info@namu.kiev.ua </a>
             </div>
             <a href="#" class="schedule__btn">
-              <img
-                src="images/icons/arrow.svg"
-                alt="наверх"
-              >
+              <img src="images/icons/arrow-up.svg" alt="наверх">
             </a>
             <div class="menu schedule__menu">
-              <h2 class="visually-hidden"></h2>
+              <h2 class="visually-hidden">Меню</h2>
               <div class="menu__content">
                 <div class="menu__box">
-                  <a
-                    href="#gallery"
-                    class="menu__item"
-                  >
-                    Галерея
-                  </a>
-                  <a
-                    href="#actions"
-                    class="menu__item"
-                  >
-                    Виставки та події
-                  </a>
+                  <a href="#gallery" class="menu__item">Галерея</a>
+                  <a href="#actions" class="menu__item">Виставки та події</a>
                 </div>
                 <div class="menu__box">
-                  <a
-                    href="#schedule"
-                    class="menu__item"
-                  >
-                    Про Нас
-                  </a>
-                  <a
-                    href="#schedule"
-                    class="menu__item"
-                  >
-                    Контакти
-                  </a>
+                  <a href="#schedule" class="menu__item">Про Нас</a>
+                  <a href="#schedule" class="menu__item">Контакти</a>
                 </div>
               </div>
             </div>
@@ -457,8 +382,8 @@
     <div class="container">
       <footer class="footer page__footer">
         <div class="footer__content">
-          <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
           <div class="footer__item">Designed by Zhyriada Marina</div>
+          <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
         </div>
       </footer>
     </div>
