--- a/src/index.html
+++ b/src/index.html
@@ -35,21 +35,23 @@
               </h1>
             </div>
 
-            <div class="by-ticket">
-              <a href="#"
-                class="by-ticket__button"
-                target="_blank"
+            <form 
+              action="https://mate-academy-form-lesson.herokuapp.com/create-application/" 
+               class="to-by-tickets"
+            >
+              <button
+                class="by-ticket"
+                type="button"
+                value="by-ticket"
+                name="button"
               >
-                Квитки
-              </a>
-              <div class="by-ticket__arrow">
-                <a href="https://museum-portal.com/ua/muzeyi/87_nacionalniy-hudozhniy-muzey-ukrayini"
-                class="arrow"
-                target="_blank"
-                >
-                </a>
-              </div>
-            </div>
+                <p class="ticket">Квитки</p>
+                <div class="by-ticket__arrow">
+                  <div class="arrow">
+                  </div>
+                </div>
+              </button>
+            </form>
           </div>
 
           <div class="header__main-img">
