some fixes in 768 px layout

--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,7 @@
     <main class="main">
       <section class="events" id="events">
         <h2 class="title title__secondary">
-          Актуальні
-          <br>
-          події
+          Актуальні події
         </h2>
 
         <img src="./images/events/events_image1.jpg"
@@ -128,7 +126,7 @@
           Галерея
         </h2>
 
-        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+        <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="swiper-zoom-container">
@@ -145,6 +143,7 @@
                 >
               </div>
             </div>
+
             <div class="swiper-slide">
               <div class="swiper-zoom-container">
                 <img src="./images/gallery/gallery_image3.jpg"
@@ -160,93 +159,34 @@
                 >
               </div>
             </div>
-
-            <div class="swiper-slide">
-              <div class="swiper-zoom-container">
-                <img src="./images/gallery/gallery_image5.jpg"
-                  alt="gallery_image4"
-                >
-              </div>
-            </div>
           </div>
 
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
           <div class="swiper-pagination"></div>
         </div>
-
-        <!--
-        <div class="slider" id="mySlider">
-          <div class="slider-slides">
-            <article class="slider-slide is-active">
-              <img src="./images/gallery/gallery_image1.jpg"
-                alt="gallery_image1"
-                class="gallery__picture events__picture"
-              >
-            </article>
-            <article class="slider-slide">
-              <img src="./images/gallery/gallery_image2.jpg"
-                alt="gallery_image2"
-                class="gallery__picture events__picture"
-              >
-            </article>
-            <article class="slider-slide">
-              <img src="./images/gallery/gallery_image3.jpg"
-                alt="gallery_image3"
-                class="gallery__picture events__picture"
-              >
-            </article>
-            <article class="slider-slide">
-              <img src="./images/gallery/gallery_image4.jpg"
-                alt="gallery_image4"
-                class="gallery__picture events__picture"
-              >
-            </article>
-          </div>
-
-          <div class="slider-pagination">
-            <button class="slider-pagination-button is-active" type="button">
-              ::before
-              "1"
-            </button>
-            <button class="slider-pagination-button" type="button">
-              ::before
-              "2"
-            </button>
-            <button class="slider-pagination-button" type="button">
-              ::before
-              "3"
-            </button>
-            <button class="slider-pagination-button" type="button">
-              ::before
-              "4"
-            </button>
-          </div>
-        </div>
-        -->
-
       </section>
 
       <section class="subscribe">
         <div class="subscribe__background"></div>
-        <h2 class="title title__secondary title__secondary--subscribe">
-          Підписка
-        </h2>
+        <div class="subscribe__content">
+          <h2 class="title title__secondary title__secondary--subscribe">
+            Підписка
+          </h2>
 
-        <p class="subscribe__text">
-          Бути в курсі всіх актуальних подій та останніх новин.
-        </p>
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
 
-        <div class="button button--red subscribe__button">
-          <input name="email"
-            type="email"
-            id="email"
-            placeholder="E-mail"
-            class="button
-            button__subscribe"
-            required
-          >
-          <button class="button__arrow button__arrow--red"></button>
+          <div class="button button--red subscribe__button">
+            <input name="email"
+              type="email"
+              id="email"
+              placeholder="E-mail"
+              class="button
+              button__subscribe"
+              required
+            >
+            <button class="button__arrow button__arrow--red"></button>
+          </div>
         </div>
       </section>
 
