add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -191,14 +191,23 @@
         <h2 class="events__title">Підписка</h2>
         <p class="events__descroption">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-        <form class="events__form">
+        <form
+          action="#"
+          class="events__form"
+          onsubmit="return false"
+          target="_blank"
+          method="post"
+        >
           <input
             type="email"
             name="email"
-            placeholder="E-mail" class="events__form--input"
+            onclick="return false"
+            placeholder="E-mail"
+            class="events__form--input"
             required
+            autocomplete="off"
           >
-          <button class="events__form--button" type="submit"></button>
+          <button class="events__form--button" type="submit"> </button>
         </form>
 
       </section>
