--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,9 @@
           
         </div>
         <div class="header__event">
-          <span class="header__event-line">
+          <a class="header__event-line" href="#current-events">
               Події
-          </span>
+          </a>
         </div>
         
       </div>
@@ -512,13 +512,7 @@
                  class="contacts__info"
                 >
               вул. М. Грушевського, 6;
-                </a> 
-                <a
-                  href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
-                  target="_blank"
-                  class="contacts__info"
-                >
-                Київ, 01001<br>
+              Київ, 01001<br>
                 </a> 
                 <a href="tel:+38 (044) 278-13-57"
                   data-title="+38 (044) 278-13-57"
