add corrections for footer

--- a/src/index.html
+++ b/src/index.html
@@ -543,7 +543,7 @@
           <a href="#page__top"  class="page__go-top">
           </a>
         </div>
-
+        <div class="green-line"></div>
         <div class="green-underline"></div> 
 
         <div class="footer__menu-first">
