events for desktop ready

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
     <main class="main">
       <section class="events" id="events">
-        <h2 class="title title__secondary">
+        <h2 class="title title__secondary events__title">
           Актуальні події
         </h2>
 
@@ -83,30 +83,34 @@
           class="picture events__picture"
         >
 
-        <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
+        <div class="events__content">
+          <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
-        <h3 class="title title__third title--rectangle">
-          Йду i повертаюсь
-        </h3>
+          <h3 class="title title__third title--rectangle">
+            Йду i повертаюсь
+          </h3>
 
-        <p class="events__info">
-          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-        </p>
+          <p class="events__info">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
 
         <img src="./images/events/events_image2.jpg"
           alt="events-image"
           class="picture events__picture"
         >
 
-        <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
+        <div class="events__content">
+          <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
-        <h3 class="title title__third title--rectangle">
-          I спогади i мрії
-        </h3>
+          <h3 class="title title__third title--rectangle">
+            I спогади i мрії
+          </h3>
 
-        <p class="events__info">
-          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
-        </p>
+          <p class="events__info">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+          </p>
+        </div>
       </section>
 
       <section class="separator">
