Working desktop and tablet versions

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body" id="home">
     <header class="header page__section">
@@ -119,7 +120,7 @@
     <main class="main">
       <div class="page__section page__section--events events" id="events">
         <div class="container">
-          <div class="events__event event--1">
+          <div class="events__event events--1">
             <div class="grid">
               <h2 class="grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2 page__title">
                 Актуальні події
@@ -144,7 +145,7 @@
             </div>
           </div>
 
-          <div class="events__event event--2">
+          <div class="events__event events--2">
             <div class="grid">
               <img
                 src="/images/photos/02.jpg"
@@ -167,7 +168,7 @@
           </div>
         </div>
 
-        <div class="events__event event--3">
+        <div class="events__event events__event--last events--3">
           <img
             src="/images/photos/03.jpg"
             alt="Від класицизму до романтизму"
@@ -187,38 +188,45 @@
 
       <div class="page__section gallery" id="gallery">
         <div class="container">
-          <div class="grid grid--gallery">
-            <h2 class="page__title grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2">
-              Галерея
-            </h2>
+          <h2 class="page__title page__title--gallery">
+            Галерея
+          </h2>
+          <div class="grid gallery__images">
             <img
               src="/images/photos/04.jpg"
               alt="Перше фото в галереї"
-              class="gallery__image grid__item--desktop-1-3 grid__item--tablet-1-3 grid__item--mobile-1-2"
+              class="gallery__image gallery__image--1 grid__item--desktop-1-3 grid__item--tablet-1-3 grid__item--mobile-1-2"
             >
             <img
               src="/images/photos/05.jpg"
               alt="Друге фото в галереї"
-              class="gallery__image grid__item--desktop-5-12 grid__item--tablet-4-6 grid__item--mobile-1-2"
+              class="gallery__image gallery__image--2 grid__item--desktop-5-12 grid__item--tablet-4-6 grid__item--mobile-1-2"
             >
             <img
               src="/images/photos/06.jpg"
               alt="Третє фото в галереї"
-              class="gallery__image grid__item--desktop-1-8 grid__item--tablet-1-3 grid__item--mobile-1-2"
+              class="gallery__image gallery__image--3 grid__item--desktop-1-8 grid__item--tablet-1-3 grid__item--mobile-1-2"
             >
             <img
               src="/images/photos/07.jpg"
               alt="Четверте фото в галереї"
-              class="gallery__image grid__item--desktop-9-12 grid__item--tablet-4-6 grid__item--mobile-1-2"
+              class="gallery__image gallery__image--4 grid__item--desktop-9-12 grid__item--tablet-4-6 grid__item--mobile-1-2"
             >
+          </div>
+
+          <div class="gallery__indicators">
+            <div class="gallery__indicator gallery__indicator--is-active"></div>
+            <div class="gallery__indicator"></div>
+            <div class="gallery__indicator"></div>
+            <div class="gallery__indicator"></div>
           </div>
         </div>
       </div>
 
       <div class="page__section page__section--contacts contacts" id="contacts">
         <div class="container">
-          <div class="grid">
-            <div class="contacts__block grid__item--desktop-4-9 grid__item--tablet-2-4">
+          <div class="grid grid--contacts">
+            <div class="contacts__block grid__item--desktop-4-9 grid__item--tablet-2-5">
               <h2 class="page__title page__title--contacts">
                 Підписка
               </h2>
@@ -239,7 +247,7 @@
                     required
                   >
                 </form>
-                <div class="header__button-arrow header__button-arrow--contacts"></div>
+                <button class="header__button-arrow header__button-arrow--contacts" type="submit"></button>
               </div>
             </div>
           </div>
@@ -249,7 +257,7 @@
       <div class="footer page__section page__section--footer">
         <div class="container">
           <div class="footer__nav grid">
-            <div class="footer__icons grid__item--desktop-1-1">
+            <div class="footer__icons grid__item--desktop-1-1 grid__item--tablet-1-1">
               <a href="#" class="footer__link">
                 <img
                   src="/images/NAMU-logo.svg"
@@ -273,7 +281,7 @@
               </div>
             </div>
 
-            <div class="nav__schedule schedule grid__item--desktop-3-4">
+            <div class="nav__schedule schedule grid__item--desktop-3-4 grid__item--tablet-2-3">
               <h3 class="schedule__title schedule__title--footer">
                 Графік роботи
               </h3>
@@ -304,24 +312,24 @@
               </div>
             </div>
 
-            <div class="footer__contacts grid__item--desktop-5-6">
+            <div class="footer__contacts grid__item--desktop-5-6 grid__item--tablet-4-5">
               <h3 class="schedule__title schedule__title--footer">
                 Контакти
               </h3>
 
               <p class="schedule__work-day-text schedule__work-day-text--footer">
                 вул. М. Грушевського, 6; Київ, 01001 <br>
-                тел. +38 (044) 278-13-57
+                тел. +38 (044) 278-13-57 <br>
                 факс +38 (044) 278-74-54 <br>
                 e-mail: info@namu.kiev.ua
               </p>
             </div>
 
-            <div class="grid__item--desktop-7-7">
+            <div class="grid__item--desktop-7-7 grid__item--tablet-2-5 grid__item--mobile-1-2">
               <div class="footer__line"></div>
             </div>
 
-            <div class="nav__list nav__list--footer grid__item--desktop-8-9">
+            <div class="nav__list nav__list--footer grid__item--desktop-8-9 grid__item--tablet-2-3">
               <li class="nav__item nav__item--footer">
                 <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
               </li>
