subscribe and contact-us sections for desktop done

--- a/src/index.html
+++ b/src/index.html
@@ -229,12 +229,12 @@
           <h4 class="title title__fourth">Контакти:</h4>
           <p class="address__address">вул. M. Грушевського, 6; Київ, 01001</p>
           <p class="address__phone">тел. +38 (044) 278-13-57</p>
-          <p class="address__fax">факс +38 (044) 278-74-54</p>
+          <p class="address__fax">факс +38 (044) <span class="address__fax--br">278-74-54</span></p>
           <p class="address__email">e-mail: info@namu.kiev.ua</p>
         </address>
 
         <div class="line contact-us__line">
-          <hr class="line__horizontal">
+          <hr class="line__horizontal line__horizontal--vertical">
         </div>
 
         <nav class="links contact-us__links">
