--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
         </div>
         <div class="lecture__details">
           <div>
-            <span class="events__event-type">лекція</span>
+            <span class="events__event-type lecture__type">лекція</span>
             <span class="events__event-date lecture__date">26/08/2019-11:00</span>
           </div>
           <div class="lecture__title">
@@ -193,8 +193,8 @@
         </div>
         <div class="slider__buttons">
           <a href="#img1"><div class="slider__button btn1"></div></a>
+          <a href="#img2"><div class="slider__button"></div></a>
           <a href="#img3"><div class="slider__button"></div></a>
-          <a href="#img4"><div class="slider__button"></div></a>
           <a href="#img4"><div class="slider__button"></div></a>
         </div>
       </div>
