menu for tablet ready

--- a/src/index.html
+++ b/src/index.html
@@ -50,24 +50,28 @@
         </ul>
       </nav>
 
-      <div class="line">
+      <div class="line menu__line">
         <hr class="line__horizontal line__horizontal--white">
       </div>
 
       <div class="menu__opening">
         <h4 class="title title__fourth title__fourth--white">Графік роботи</h4>
 
-        <article>
-          <p><span class="menu__opening--bold">12:00 — 20:00</span> середа</p>
-          <p><span class="menu__opening--bold">12:00 — 20:00</span>  четвер</p>
-          <p><span class="menu__opening--bold">12:00 — 20:00</span> п’ятниця</p>
-          <p><span class="menu__opening--bold">11:00 — 19:00</span> субота</p>
-          <p><span class="menu__opening--bold">11:00 — 19:00</span> неділя</p>
-          <br>
-          <span class="menu__opening--bold">Вихідні:</span> понеділок, вівторок
-          <br>
-          Kaca припиняє роботу за 1 годину
-          до закриття музею
+        <article class="menu__article">
+          <div class="menu__article--left">
+            <p><span class="menu__opening--bold">12:00 — 20:00</span> середа</p>
+            <p><span class="menu__opening--bold">12:00 — 20:00</span>  четвер</p>
+            <p><span class="menu__opening--bold">12:00 — 20:00</span> п’ятниця</p>
+            <p><span class="menu__opening--bold">11:00 — 19:00</span> субота</p>
+            <p><span class="menu__opening--bold">11:00 — 19:00</span> неділя</p>
+          </div>
+
+          <div class="menu__article--right">
+            <span class="menu__opening--bold">Вихідні:</span> понеділок, вівторок
+            <br>
+            Kaca припиняє роботу за 1 годину
+            до закриття музею
+          </div>
         </article>
       </div>
     </div>
