add upward arrow

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
+    <div class="upward"></div>
+
     <header class="header" id="home">
       <nav class="hamburger">
         <a class="menuIcon icon icon__menu"></a>
