fix desctop version

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,13 @@
           <a href="#" class="header__bottom__button"><img src="./images/icons/arrow-white.svg" alt="logo"></a>
         </div>
       </div>
+
+      <div class="header__side__title">
+        <p class="header__side__title__name">Події</p>
+      </div>
     </header>
 
-    <aside class="menu" id="menu">
+    <aside class="menu menu__wrapper" id="menu">
       <nav class="menu__nav">
         <a href="#close" class="icon icon--close"></a>
 
@@ -46,19 +50,21 @@
       </nav>
 
       <div class="menu__schedule">
-        <h2 class="menu__title">Графік роботи</h2>
+        <div class="menu__schedule__wrapper">
+          <h2 class="menu__title">Графік роботи</h2>
 
-        <ul class="menu__schedule__description">
-          <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> середа</span></li>
+          <ul class="menu__schedule__description">
+            <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> середа</span></li>
 
-          <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> четвер</span></li>
+            <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> четвер</span></li>
 
-          <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> п’ятниця</span></li>
+            <li class="menu__schedule__time">12:00 — 20:00<span class="menu__schedule__day"> п’ятниця</span></li>
 
-          <li class="menu__schedule__time">11:00 — 19:00<span class="menu__schedule__day"> субота</span></li>
+            <li class="menu__schedule__time">11:00 — 19:00<span class="menu__schedule__day"> субота</span></li>
 
-          <li class="menu__schedule__time">11:00 — 19:00<span class="menu__schedule__day"> неділя</span></li>
-        </ul>
+            <li class="menu__schedule__time">11:00 — 19:00<span class="menu__schedule__day"> неділя</span></li>
+          </ul>
+        </div>
 
         <p class="menu__description">
           <span class="footer__schedule__time">Вихідні:</span> понеділок, вівторок<br>
@@ -118,6 +124,7 @@
               class="gallery__image"
             >
           </div>
+
           <div>
             <img
               src="./images/gallery/gallery-2.png"
@@ -125,6 +132,15 @@
               class="gallery__image"
             >
           </div>
+
+          <div>
+            <img
+              src="./images/gallery/gallery-2.png"
+              alt="image"
+              class="gallery__image"
+            >
+          </div>
+
           <div>
             <img
               src="./images/gallery/gallery-2.png"
@@ -166,97 +182,99 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__wrapper">
-        <div class="footer__icons">
-          <a href="#" class="icon icon__footer--logo"></a>
+      <div class="footer__cover">
+        <div class="footer__wrapper">
+          <div class="footer__icons">
+            <a href="#" class="icon icon__footer--logo"></a>
 
-          <div class="footer__media">
-            <a
-              href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
-              target="_blank"
-              class="icon icon--facebook"
-            >
-            </a>
+            <div class="footer__media">
+              <a
+                href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                target="_blank"
+                class="icon icon--facebook"
+              >
+              </a>
 
-            <a
-              href="https://www.facebook.com/namu.museum"
-              target="_blank"
-              class="icon icon--instagram"
-            >
-            </a>
+              <a
+                href="https://www.facebook.com/namu.museum"
+                target="_blank"
+                class="icon icon--instagram"
+              >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__conteiner">
+            <div class="footer__schedule">
+              <h2 class="footer__title">Графік роботи</h2>
+
+              <ul class="footer__schedule__description">
+                <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> середа</span></li>
+
+                <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> четвер</span></li>
+
+                <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> п’ятниця</span></li>
+
+                <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>субота</span></li>
+
+                <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>неділя</span></li>
+              </ul>
+              <br>
+              <p class="footer__description">Вихідні: понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+
+            <div class="footer__contacts">
+              <h2 class="footer__title">Контакти:</h2>
+              <ul class="footer__list">
+                <li>
+                  <a
+                    href="https://maps.app.goo.gl/zCasBhZbAHNzAGqG9"
+                    target="_blank"
+                    class="footer__link"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li>
+                  <a href="tel:380442781357" class="footer__link">тел. +38 (044) 278-13-57</a>
+                </li>
+
+                <li>
+                  <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
+                </li>
+
+                <li>
+                  <a
+                    href="mailto:"
+                    target="_blank"
+                    class="footer__link"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <a href="#header" class="footer__top__button"></a>
           </div>
         </div>
 
-        <div class="footer__conteiner">
-          <div class="footer__schedule">
-            <h2 class="footer__title">Графік роботи</h2>
+        <nav class="footer__nav">
+          <div class="footer__nav__list">
+            <a href="#gallery" class="footer__nav__link">Галерея</a>
 
-            <ul class="footer__schedule__description">
-              <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> середа</span></li>
+            <a href="#expo" class="footer__nav__link">Про Нас</a>
 
-              <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> четвер</span></li>
+            <a href="#about_us" class="footer__nav__link">Виставки та події</a>
 
-              <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> п’ятниця</span></li>
-
-              <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>субота</span></li>
-
-              <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>неділя</span></li>
-            </ul>
-            <br>
-            <p class="footer__description">Вихідні: понеділок, вівторок<br>
-              Каса припиняє роботу за 1 годину
-              до закриття музею
-            </p>
+            <a href="#contacts" class="footer__nav__link">Контакти</a>
           </div>
-
-          <div class="footer__contacts">
-            <h2 class="footer__title">Контакти:</h2>
-            <ul class="footer__list">
-              <li>
-                <a
-                  href="https://maps.app.goo.gl/zCasBhZbAHNzAGqG9"
-                  target="_blank"
-                  class="footer__link"
-                >
-                  вул. М. Грушевського, 6; Київ, 01001
-                </a>
-              </li>
-
-              <li>
-                <a href="tel:380442781357" class="footer__link">тел. +38 (044) 278-13-57</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
-              </li>
-
-              <li>
-                <a
-                  href="mailto:"
-                  target="_blank"
-                  class="footer__link"
-                >
-                  e-mail: info@namu.kiev.ua
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <a href="#header" class="footer__top__button"></a>
-        </div>
+        </nav>
       </div>
-
-      <nav class="footer__nav">
-        <div class="footer__nav__list">
-          <a href="#gallery" class="footer__nav__link">Галерея</a>
-
-          <a href="#expo" class="footer__nav__link">Про Нас</a>
-
-          <a href="#about_us" class="footer__nav__link">Виставки та події</a>
-
-          <a href="#contacts" class="footer__nav__link">Контакти</a>
-        </div>
-      </nav>
 
       <div class="footer__bootom">
         <p class="footer__rights">Designed by Zhyriada Marina</p>
