fix desctop version

--- a/src/index.html
+++ b/src/index.html
@@ -215,9 +215,9 @@
 
                 <li class="footer__schedule__time">12:00 — 20:00<span class="footer__schedule__day"> п’ятниця</span></li>
 
-                <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>субота</span></li>
+                <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"> субота</span></li>
 
-                <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"><br>неділя</span></li>
+                <li class="footer__schedule__time">11:00 — 19:00<span class="footer__schedule__day"> неділя</span></li>
               </ul>
               <br>
               <p class="footer__description">Вихідні: понеділок, вівторок<br>
