add vertical line to header for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,11 @@
         <a href="#" class="button__tickets">КВИТКИ</a>
         <button href="#" class="button__arrow button__arrow--green"></button>
       </div>
+
+      <div class="smth">
+        <hr class="smth__line">
+        <p class="smth__text">ПОДІЇ</p>
+      </div>
     </header>
 
     <div class="menu">
